--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <tr>
         <td>
           <img
-            src="../images/Max.jpg"
+            src="./images/Max.jpg"
             alt="Max profile picture"
             height="200"
             width="200"
